# django-backup-restore

./: .gitignore  README.md  check.sh  manage.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
django/backup/: __init__.py  apps.py  storage.py
django/backup/management/commands/: _base.py  backup.py
django/restore/: __init__.py  apps.py
django/restore/management/commands/: restore.py
doc/source/: changelog.rst  conf.py  howto.rst  index.rst  reference.rst  refs.rst  tutorial.rst
tests/: asgi.py  wsgi.py
tests/settings/: default.py
